[package]
name = "frostgate-zkip"
version = "1.0.0"
edition = "2021"
description = "Zero-Knowledge Interface Protocol - A standardized interface for ZK systems"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { version = "0.1", default-features = false }
thiserror = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
tokio = { version = "1.0", features = ["full"], optional = true }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
tokio-test = "0.4"
anyhow = "1.0"

[features]
default = ["std"]
std = [
    "serde/std",
    "tokio",
    "tracing/std",
]
